crates/oxc_react_compiler/tests/snapshots/reactive-dependencies-non-optional-properties-inside-optional-chain.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-dependencies-non-optional-properties-inside-optional-chain.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.post.feedback.comments?.edges) {
		t0 = props.post.feedback.comments?.edges?.map(render);
		$[0] = props.post.feedback.comments?.edges;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
